--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -5,19 +5,19 @@
 
 .meetingHolder {
     oldwidth: calc(50% - 10px);
-    width: 450px;
+    width: 370px;
     oldheight: calc(100% - 20px);
-    height: 350px;
+    height: 370px;
     overflow-y: scroll;
-    background-color: darkslategray;
-    border: 5px inset black;
+    background-color: rgb(147, 114, 62);
+    border: 1px solid black;
     margin: 3px;
 }
 
 .meetingTitle {
     font-weight: bold;
     font-size: 24px;
-    border: 2px inset;
+    padding: 5px 12px;
     margin: 4px 20px 4px 1px;
 }
 
@@ -25,31 +25,26 @@
     font-weight: bold;
     font-size: 14px;
     padding: 5px 12px;
-    border: 2px inset;
     margin: 4px 20px 4px 1px;
 }
 
 .meetingLocation {
     padding: 5px 12px;
-    border: 2px inset;
     margin: 4px 20px 4px 1px;
 }
 
 .meetingSpeakerName {
     padding: 5px 12px;
-    border: 2px inset;
     margin: 4px 20px 4px 1px;
 }
                     
 .meetingSpeakerLink {
     padding: 5px 12px;
-    border: 2px inset;
     margin: 4px 20px 4px 1px;
 }
 
 .meetingNotes {
     padding: 5px 12px;
-    border: 2px inset;
     margin: 4px 20px 4px 1px;
 }
 
@@ -57,6 +52,19 @@
     .homepage section[role=main] {
         margin-left: 20px;
         margin-right: 20px;
+        width: 250px;
+        height: 450px;
+    }
+
+    #meetingListDiv
+    {
+        width: 275px;
+        height: 450px;
+    }
+
+    .meetingHolder
+    {
+        width: 250px;
     }
 }
 
