--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -14,6 +14,17 @@
     margin: 3px;
 }
 
+.meetingDetailHolder {
+    oldwidth: calc(50% - 10px);
+    width: calc(80% - 50px);
+    oldheight: calc(100% - 20px);
+    height: 370px;
+    overflow-y: scroll;
+    background-color: rgb(147, 114, 62);
+    border: 1px solid black;
+    margin: 3px;
+}
+
 .meetingTitle {
     font-weight: bold;
     font-size: 24px;
